<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="serverExceptionAndTryAgainLater">服务器异常，稍后重试</string>
    <string name="loadFailAndTryAgainLater">加载失败，稍后重试</string>
    <string name="networkAnomaly">网络异常</string>
    <string name="checkSetting">检查设置</string>
    <string name="retry">重试</string>
    <string name="noData">暂无数据</string>
    <string name="upgradeNow">现在更新</string>
    <string name="cancel">取消</string>
    <string name="ensure">确定</string>
    <string name="noRemindAnyMore">不再提醒</string>
    <string name="pleaseSelectDate">请选择日期</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="doubleZero">00</string>
    <string name="complete">完成</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hours">时</string>
    <string name="minutes">分</string>
    <string name="seconds">秒</string>
    <string name="openClickToNoteNotification">打开点记通知</string>
    <string name="neverMissTheLatestNewsAnymore">再也不会错过最新消息了</string>
    <string name="talkAboutItLater">以后再说</string>
    <string name="ok">好的</string>
    <!--format-->
    <string name="alreadyTheLatestVersionHint">已是最新版本 %1$s</string>
    <string name="findNewVersionHint">发现新版本 %1$s</string>
</resources>