<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/moneyInputKeyboardViewLlLeft"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/moneyInputKeyboardViewLlRight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_margin="@dimen/dp_1"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/moneyInputKeyboardViewTvOne"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/purple_200_purple_500_drawable_selector"
                android:gravity="center"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/moneyInputKeyboardViewTvTwo"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_1"
                android:layout_marginRight="@dimen/dp_1"
                android:layout_weight="1"
                android:background="@drawable/purple_200_purple_500_drawable_selector"
                android:gravity="center"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/moneyInputKeyboardViewTvThree"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/purple_200_purple_500_drawable_selector"
                android:gravity="center"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_marginLeft="@dimen/dp_1"
            android:layout_marginRight="@dimen/dp_1"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/moneyInputKeyboardViewTvFour"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/purple_200_purple_500_drawable_selector"
                android:gravity="center"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/moneyInputKeyboardViewTvFive"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_1"
                android:layout_marginRight="@dimen/dp_1"
                android:layout_weight="1"
                android:background="@drawable/purple_200_purple_500_drawable_selector"
                android:gravity="center"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/moneyInputKeyboardViewTvSix"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/purple_200_purple_500_drawable_selector"
                android:gravity="center"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_margin="@dimen/dp_1"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/moneyInputKeyboardViewTvSeven"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/purple_200_purple_500_drawable_selector"
                android:gravity="center"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/moneyInputKeyboardViewTvEight"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_1"
                android:layout_marginRight="@dimen/dp_1"
                android:layout_weight="1"
                android:background="@drawable/purple_200_purple_500_drawable_selector"
                android:gravity="center"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/moneyInputKeyboardViewTvNine"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/purple_200_purple_500_drawable_selector"
                android:gravity="center"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_marginLeft="@dimen/dp_1"
            android:layout_marginRight="@dimen/dp_1"
            android:layout_marginBottom="@dimen/dp_1"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/moneyInputKeyboardViewTvDot"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/purple_200_purple_500_drawable_selector"
                android:gravity="center"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/moneyInputKeyboardViewTvZero"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_1"
                android:layout_marginRight="@dimen/dp_1"
                android:layout_weight="1"
                android:background="@drawable/purple_200_purple_500_drawable_selector"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/moneyInputKeyboardViewTvDoubleZero"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/purple_200_purple_500_drawable_selector"
                android:gravity="center"
                android:text="@string/doubleZero"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/moneyInputKeyboardViewLlRight"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/moneyInputKeyboardViewLlLeft"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:id="@+id/moneyInputKeyboardViewLlDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_1"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete"
                app:srcCompat="@drawable/ic_backspace_gray_20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/moneyInputKeyboardViewLlComplete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complete"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>